--- a/Exe01/index.html
+++ b/Exe01/index.html
@@ -7,9 +7,13 @@
     <title>Exercício de incrementar o número</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
     <style>
         body {
-            background-color: rgba(255, 252, 189, 0.732);
+            background-color: #fff0f6;
         }
 
         #areaPrincipla {
@@ -27,15 +31,17 @@
             padding: 20% 0%;
             cursor: pointer;
             margin: 5% 15% 15% 15%;
-            border: 7px solid black;
-            background-image: linear-gradient(45deg, rgb(22, 41, 149)5%, rgba(1, 43, 172, 0.818)25%, rgb(7, 133, 161)70%, rgb(3, 83, 101)130%);
+            border: none;
+            border-radius: 30px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+            background-image: linear-gradient(45deg, #c999af, #e3b1c8, #fdcae1, #ffe5f0);
             animation: color 10s infinite alternate;
             background-size: 500% 100%;
+            color: #8f6277;
         }
 
         @keyframes color {
             0% {
-                /* background-position-x: 0%; */
                 background-position: 0% 50%;
             }
 
@@ -44,18 +50,19 @@
             }
 
             100% {
-                /* background-position-x: 100%; */
                 background-position: 0% 50%;
             }
         }
 
         #numero:hover {
-            transform: scale(1.1);
+            transform: scale(1.02);
         }
 
         p {
-            font-size: 15pt;
-            font-family: Arial, Helvetica, sans-serif;
+            font-size: 25pt;
+            font-weight: 400;
+            font-family: 'Luckiest Guy', cursive;
+            color: #8f6277;
             text-align: center;
             margin-top: 2%;
         }
