--- a/Exe03/index.html
+++ b/Exe03/index.html
@@ -4,34 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Exercicio 03 - negrito dinamicamente</title>
+    <title>Pesquisa em tabela Dinâmica</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-
-        #area {
-            width: fit-content;
-            height: fit-content;
-            margin: 0 auto;
-        }
-
-        ul {
-            width: fit-content;
-            text-align: center;
-            padding-left: 0px;
-            
-        }
-
-        ol {
-            margin-top: 5%;
-            margin-bottom: 10%
-        }
-
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-         
+
+    <div id="arearTexto"><span>Faça um programa que “pegue” uma lista  "ol" no HTML e coloque negrito dinamicamente a partir de um nome digitado no seu input</span></div>
 
     <div id="area">
         <input type="text" name="areaPesquisa" id="areaPesquisa">
