acrescentado um nome em ol

--- a/Exe03/index.html
+++ b/Exe03/index.html
@@ -27,6 +27,7 @@
             <ol>Maria</ol>
             <ol>Pedro</ol>
             <ol>Luana</ol>
+            <ol>bruna</ol>
         </ul>
     </div>
 
