atualizado gif e formatação do código

--- a/Exe03/index.html
+++ b/Exe03/index.html
@@ -15,7 +15,10 @@
 
 <body>
 
-    <div id="arearTexto"><span>Faça um programa que “pegue” uma lista  "ol" no HTML e coloque negrito dinamicamente a partir de um nome digitado no seu input</span></div>
+    <div id="arearTexto">
+        <span>Faça um programa que “pegue” uma lista "ol" no HTML e coloque negrito dinamicamente a partir de um nome
+            digitado no seu input</span>
+    </div>
 
     <div id="area">
         <input type="text" name="areaPesquisa" id="areaPesquisa">
