--- a/Exe04/index.html
+++ b/Exe04/index.html
@@ -12,6 +12,10 @@
 
 <body>
 
+    <div id="text">colete do usuário duas datas (usando inputs de data) e altere a cor do “quadrado” dessa data no calendário dinamicamente e a seguir faça: 1) calcule quantos dias existem entre elas e 
+        exiba na tela (por exemplo, entre 05/04/2022 – 10/04/2022 → 5 dias); 2) mude a cor dos dias entre as datas
+         selecionadas para a cor azul e as datas selecionadas para a cor laranja.</div>
+
     <div id="area">
         <table class="calendar">
             <thead>
