acrescentado texto no gif e atualizado o gif do exercicio 06

--- a/Exe06/index.html
+++ b/Exe06/index.html
@@ -21,10 +21,20 @@
                 border-radius: 100%;
                 top: 40%;
             }
+
+            #text{
+                color: white;
+                margin: 20px auto;
+                font-size: 20pt;
+                font-weight: bold;
+                width: fit-content;
+                height: fit-content;
+            }
         </style>        
     </head>
     <body>
 
+        <div id="text"><span>Criar uma div redonda e fazer ela se mover horizontalmente pela tela</span></div>
 
         <div id="circulo"></div>
 
