--- a/Exe07/index.html
+++ b/Exe07/index.html
@@ -3,27 +3,35 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> Div redonda se movimentta diagonal</title>
+        <title> Div redonda se movimenta diagonal</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
 body{
-    background-color: rgb(196, 217, 213);
+    background-color: rgb(0, 0, 0);
 }
 
             #circulo{
                 position: absolute;
                 width: 90px;
                 height: 90px;
-                background-color: rgb(153, 153, 153);
-                border: 3px solid black;
+                background-color: rgba(168, 97, 239, 0.782);
+                border: 3px solid  rgba(168, 97, 239, 0.912);
                 border-radius: 100%;
                 top: 40%;
+            }
+            #text{
+                color: white;
+                margin: 20px auto;
+                font-size: 20pt;
+                font-weight: bold;
+                width: fit-content;
+                height: fit-content;
             }
         </style>
     </head>
     <body>
-    
+        <div id="text"><span>Criar uma div redonda e fazer ela se movimentar na  horizontal e vertical pela tela</span></div>
         <div id="circulo"></div>
    
         <script src="Script.js" async defer></script>
